# bazel_runfiles_repro

./: BUILD.bazel  WORKSPACE  go.mod  reproduce.sh
rules/echoer/: BUILD.bazel  defs.bzl  echoer.bzl  echoer.go
