load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "echoer_lib",
    srcs = ["echoer.go"],
    importpath = "github.com/purkhusid/bazel_runfiles_repro/rules/echoer",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "echoer",
    embed = [":echoer_lib"],
    visibility = ["//:__subpackages__"],
)
